# web_classifier

./: README.md
Mlflow_project_Linkscribe/: MLproject  driver.py  load_model.py  main.py  modelo.ipynb  pyproject.toml  python_env.yaml  resumen_datos.py  serve
Mlflow_project_Linkscribe/mlruns/0/: meta.yaml
Mlflow_project_Linkscribe/mlruns/632306513088104617/: meta.yaml
Mlflow_project_Linkscribe/mlruns/632306513088104617/9d3e033db7ed4677908918ef4200794f/: meta.yaml
Mlflow_project_Linkscribe/mlruns/632306513088104617/9d3e033db7ed4677908918ef4200794f/artifacts/LinearSVC/: MLmodel  conda.yaml  model.pkl  python_env.yaml
Mlflow_project_Linkscribe/mlruns/632306513088104617/9d3e033db7ed4677908918ef4200794f/metrics/: accuracy  f1  precision  recall
Mlflow_project_Linkscribe/mlruns/632306513088104617/9d3e033db7ed4677908918ef4200794f/tags/: mlflow.log-model.history  mlflow.runName  mlflow.source.name
Mlflow_project_Linkscribe/mlruns/models/web-classifier-uao/: meta.yaml
Mlflow_project_Linkscribe/mlruns/models/web-classifier-uao/version-1/: meta.yaml
