[tool.poetry]
name = "linkscribe-project"
version = "0.1.0"
description = ""
authors = ["richard <richard_ale.pabon@uao.edu.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.26.0"
pandas = "^2.1.1"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
scikit-learn = "^1.3.1"
scipy = "^1.11.3"
ipython = "^8.16.1"
mlflow = "^2.7.1"
jupyter = "^1.0.0"
beautifulsoup4 = "^4.12.2"
spacy = "^3.7.1"
en-core-web-sm = {path = "C:/Users/Richard Alejandro/Downloads/en_core_web_sm-3.7.0-py3-none-any.whl"}
lxml = "^4.9.3"
pydantic = ">=1.0,<2.0"
fastapi = "^0.103.2"
fastapi-utils = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
